# soccer_analytics

./: .gitignore  README.md  pyproject.toml
analysis_notebooks/kloppy/: README.md
analysis_notebooks/xg/: baseline.ipynb  cnn_overall.ipynb  gbm.dill  gbm.ipynb  gbm_feature_engineered.dill  gbm_feature_engineered.ipynb  resnet_eda-Copy1.ipynb  shot_block_eda.ipynb  shot_block_eda_2.ipynb  simple_model.dill  simple_model.ipynb  statsbomb_overall.ipynb
kloppy/: basics.ipynb  statsbomb_metadata.ipynb
soccer_analytics/: data_split.py  preprocessing.py
soccer_analytics/data/: statsbomb.py
