[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer_analytics"
authors = [{name = "Andrew Schechtman-Rook", email = "rook166@gmail.com"}]
description = "Utilities for soccer analytics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
dependencies = [
    "dill==0.3.7",
    "feature_engine==1.6.2",
    "kloppy==3.12",
    "pandas==2.1",
    "scikit-learn==1.3.0",
    "shape==0.43.0",
    "xgboost==1.7.6",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["soccer_analytics"]

[tool.setuptools.dynamic]
version = {attr = "soccer_analytics.__version__"}
